--- a/q/274288.html
+++ b/q/274288.html
@@ -26,14 +26,59 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>110</td><td>C gcc</td><td>240724T225036Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274423#274423">engineer</a></td></tr>
-<tr d-ix="1"><td>022</td><td>Pyth</td><td>240725T230147Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274445#274445">CursorCo</a></td></tr>
-<tr d-ix="2"><td>141</td><td>Python</td><td>240722T035101Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274316#274316">Bubbler</a></td></tr>
-<tr d-ix="3"><td>026</td><td>Charcoal</td><td>240720T070451Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274293#274293">Neil</a></td></tr>
+<tr d-ix="0"><td>026</td><td>Charcoal</td><td>240720T070451Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274293#274293">Neil</a></td></tr>
+<tr d-ix="1"><td>110</td><td>C gcc</td><td>240724T225036Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274423#274423">engineer</a></td></tr>
+<tr d-ix="2"><td>022</td><td>Pyth</td><td>240725T230147Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274445#274445">CursorCo</a></td></tr>
+<tr d-ix="3"><td>141</td><td>Python</td><td>240722T035101Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274316#274316">Bubbler</a></td></tr>
 <tr d-ix="4"><td>096</td><td>K ngn/k</td><td>240722T100340Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274321#274321">Bubbler</a></td></tr>
 <tr d-ix="5"><td>058</td><td>JavaScript Node.js</td><td>240722T084413Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274319#274319">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <sup><s>112</s></sup> 110 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
+<pre><code>≧×⁸φＦ×Ｎφ⊞υ∨‹ιφ⁻⌊υ∕§υ±φιＩ⊟υ
+</code></pre>
+<p><a href="https://tio.run/##JYzNCoMwEITvPkWOG0ivpeBJ2otQfyh9gVRXXTBRslnp26eRzmEO3/DNsNgwbHZNqbF7xUyzf9G8RHiTQzbqZtSky2LagvojqP0usRX3wQD6XLXqhRcQo7oAT2QGOrFRDXlhyE1OHEgmDzpoRKhi7Uf8nkqLs40I@cUo0jll0QfyEe6WI/Tbnr0MU7qmy7H@AA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Note that the version shown is only within 0.1% for <code>x</code> up to about <code>6</code>; for more accuracy the <code>⁸</code> could be changed to <code>χ</code> or even <code>φ</code> but it would make the resulting program inordinately slow. Explanation:</p>
+<pre><code>≧×⁸φ
+</code></pre>
+<p>Divide the interval into strips of width <code>1/8000</code> (or <code>1/10000</code> or <code>1/1000000</code>).</p>
+<pre><code>Ｆ×Ｎφ
+</code></pre>
+<p>Calculate the number of strips needed to reach an input of <code>x</code>.</p>
+<pre><code>⊞υ∨‹ιφ⁻⌊υ∕§υ±φι
+</code></pre>
+<p>For strips of <code>0&lt;x&lt;1</code> use a height of <code>1</code>, otherwise estimate the slope of the graph and use that to estimate the height of the next strip.</p>
+<pre><code>Ｉ⊟υ
+</code></pre>
+<p>Output the height of the last strip.</p>
+<p>A port of @Bubbler's Python (backport of @att's K) answer weighs in at a massive <s>72</s> 63 bytes:</p>
+<pre><code>ＮθＦ⁹⁹⊞υ¬ιＦθ«≔⟦⁰⟧ηＦυ⊞η∕⁺κ§η±¹⁺²ιＵＭη∕κ∨¬λλ≔Ｅη⎇λκ⁻§υ⁰Σηυ»Ｉ↨⁻¹﹪θ¹⮌υ
+</code></pre>
+<p><a href="https://tio.run/##TY@7TgMxEEXr7FdMOZYMykIVpcqjSZFlBXSIwmRNbMVrZ/1YgRDfbsabRKI@99w7c1DCH5wwOe/sOcUm9R/S48CW1afzgIsFgzYFhYlD4yJqdiMDg59qtgpBHy2@zd85KEKziaWrpDhs9ag7ia1JAU8cVnFnO/lVSCOPIkqsGWMcJv7AgfpLy16cN67vhe3@dZD@5LFcYcgwl@T1ABJK8lV6K/w3Gg6U3mtLrbdJ@mBO3kvqUbFpNFHBb9V6bSNuRIi4FkHixapJd10yDgcOdUk/y1F64qnIy5zr@8d8N5o/" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>Ｎθ
+</code></pre>
+<p>Input <code>x</code>.</p>
+<pre><code>Ｆ⁹⁹⊞υ¬ι
+</code></pre>
+<p>Start with the polynomial for <code>0&lt;=x&lt;=1</code>.</p>
+<pre><code>Ｆθ«
+</code></pre>
+<p>Repeat <code>⌊x⌋</code> times.</p>
+<pre><code>≔⟦⁰⟧η
+</code></pre>
+<p>Start a new polynomial with a dummy constant term.</p>
+<pre><code>Ｆυ⊞η∕⁺κ§η±¹⁺²ι
+</code></pre>
+<p>For each term of the previous polynomial, subtract the latest term of the new polynomial, divide it by the endpoint of the interval, and append it to the new polynomial.</p>
+<pre><code>ＵＭη∕κ∨¬λλ
+</code></pre>
+<p>Divide each term (except the dummy term) of the new polynomial by its index.</p>
+<pre><code>≔Ｅη⎇λκ⁻§υ⁰Σηυ
+</code></pre>
+<p>Calculate the constant term to replace the dummy term of the new polynomial and replace the old polynomial.</p>
+<pre><code>»Ｉ↨⁻¹﹪θ¹⮌υ
+</code></pre>
+<p>Evaluate the polynomial at <code>⌊x⌋+1-x</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <sup><s>112</s></sup> 110 bytes</h1>
 <p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/76323/l4m2">@l4m2</a></em></p>
 
 <pre class="lang-c prettyprint-override"><code>double k(double u){int V=2e4,i=0;double L[V*8],l=1;for(*L=1;i++&lt;u*V-V;L[i]=l-=L[i&gt;V?i-V:0]/(i+V-1));return l;}
@@ -41,7 +86,7 @@
 <p><a href="https://tio.run/##lVVrb5tIFP3Or7hyZQkwkAHMqw6pskoqVaWrarNrrZRaEcFDPBs8oGFIusr6t3tnYHDcdbRS/cEMd@4993WOXdgPRbHfr@vuvsLwqKtDZ7wQymGZenhukRQtlD27XZrxyqpSd1HWTDczcSCz2XlnLu3lIrslq7SyU/G8WH4g9vI9Wp3pZLa0XcNYMMw7RqFa7PbvCC2qbo3hvOXr@7qunM2F9mrc5nzzo0W4kfrEVJF7adP43w1e4xJUkbp59bnsaGGoboyFpp2ZGpjwO255C3yDocnbFq/hihSP25zaAvAX1pG/KMhATmoKXUvoQ@@Lv@fbRuByEQ1F3uLWkWBXmGO2JRS3QMre8RBLWngmfEMoIMedQj1cFzVjuOCQ0/YZMxADhLyqJJRyUIl6@DPtnWhJoMOvf3y5/vPyy9fs@gYireU5J4XAoqIY1bCKuyO06Xh7exSwghReXAtcx7fAcxIL5o5nQeAEFkQWxDtLgzc@I2Dd8bcQDzESGjmRH4V@EPlB4HsBSjJpQ0ESR7HrikfoRygajMhLomAezaM4CWI38IT1gCWvEYpD5Mah67oeClw3FA6xE82DMEwSgZ74iXdtSzDf8XwPhYmP5p4XuujajrPdQnuqybrf0904S33gAjQGvPS5JN369YtGOOuwIIc0y23okvOS7UDOj1oWr7PZGC4/auz9uAXKf8ZPVidDxd8bufj0ZLBv@D7U0rHRezTj5LrBrMBUupT5fasrZFuGGXA2ZjLBRWKg2eIQfjg0THRZ6pNGnzpeVRoCaeq4QVWCAhOyGAwG/CNOflVOp4AZq9k3OjnlS1@nJfNbKrs1Fmm8phcK0cfSL1IpC2NcQplXLR48d/23nIzeX36AydfLm5sJvIfJx8tP2UQg7kYx/9bRQctKxK/ya6B@EgLLQUp4XNQgqp4grKN3NcUHalhw@NlTWz4a0vGI5ACgE/3pnfFTpeC82MBzzdZS6m@V09uOCpJMzNlDYUGxyRmYpnh5Gqs74qoruSodB5Ie5j22KKBazni91iWA5Jv4PckyVb3E2OaE6v@bTlUlZdUfUngc1vWj0MZ7tfXXrsYLS6XosZXT8J@ARDX7feyE@8gJ9r6Dkn8B" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 <p>Splits the domain <span class="math-container">\$[1,8]\$</span> across <span class="math-container">\$(8-1)(2*10^4)=140000\$</span> slices and computes each slice's y-value successively based off of the previous y-values.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 22 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 22 bytes</h1>
 <pre><code>L|g1b-y-b^T_6cytb*b^T6
 </code></pre>
 <p><a href="https://tio.run/##K6gsyfj/36cm3TBJt1I3KS4k3ji5siRJC8gy/l9pqGf8HwA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a> (link is to a faster version of the code which has way too much error, but will actually run online)</p>
@@ -59,7 +104,7 @@
                  *b^T6    #  b * 10^6
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 141 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 141 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>g=lambda x,p=[1]+[0]*99,I=2,z=0,i=0:x&lt;1and sum(a*(1-x)**~-(i:=i+1)for a in p)or g(x-1,[p[0]-sum(A:=[(z:=(z+w)/I)/(i:=i+1)for w in p])]+A,I+1)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=lZJBjpswGIXVZTjFv6mEg2FsE2NM4kWWnCHKglFIxtIEEAEFsugNeoJusmnv1K57hq77E6YVo2mqdgGGJ7_n7_3w6UvVN09lcf327vsu38PB7UjizCqz4Vtvw7ZzrZ3ZvqwhBVtAnRWH3LVFg7tIcjHWsOXabNxLYtyL15EHN_UEwcUmxnqcDMZuMFbbJUZWGOif2qO7Jltv7czqvGnrAgYlm7vc795zMp9bGGyWZoMxL9pjXmdN7laEOHcIl71BszM7P9nnHPqVYUnvGb4cAV8dnPymPSNmj8yvac8j7R_4-n8ho1MsmhpGL3ghxYBs95CuxuElL9GD5S7d21lO6GiK2v-P8HPb7P3468eDec6Oj7sM3iCLX8hJt-JZsZtkY_IHf8pzy68IPmERn9-tkv69xgvUD1tUbXMCAxtOgQchBRFoCotAUJCBpKAoxFunbJvJPhaoUEWhVKGUoZBMDxKTOlYx57hEoWLqpjGhlVyohYq1jLkUo8hYHDEeR5xzwSTnEZ4RqIWMIq0xUIda5D4GhIEIBYt0yBZCRJzlPqKMY4ZyKHSxlTs2QGFEvP2o9fDJD64lKFPIHk-3F_ChJPCAt7H99TquPwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -134,51 +179,6 @@ def g(x):
 <p>The constant term is simply <span class="math-container">\$f_{i-1}(\frac{1}{2}) - f_{i}(-\frac{1}{2})\$</span> where <span class="math-container">\$f_i\$</span> is evaluated without the constant term.</p>
 <p><code>E(f,x)</code> evaluates the polynomial <code>f</code> at <code>x</code>. <code>N(p,i)</code> takes the series for <span class="math-container">\$f_i\$</span> and the value of <span class="math-container">\$i+1.5\$</span> to compute the series for <span class="math-container">\$f_{i+1}\$</span>. <code>g(x)</code> finds the appropriate function for the interval that <code>x</code> belongs to, and then evaluates the function at <code>x</code> offset by an appropriate amount.</p>
 <p>I had to read a few papers cited on the Wikipedia page to get the idea, but computing with the idea turned out to be not that complex, yet surprisingly efficient and accurate. I intentionally didn't golf the program hard to keep the intents relatively clear, in the hopes that others can port this without too much problem.</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
-<pre><code>≧×⁸φＦ×Ｎφ⊞υ∨‹ιφ⁻⌊υ∕§υ±φιＩ⊟υ
-</code></pre>
-<p><a href="https://tio.run/##JYzNCoMwEITvPkWOG0ivpeBJ2otQfyh9gVRXXTBRslnp26eRzmEO3/DNsNgwbHZNqbF7xUyzf9G8RHiTQzbqZtSky2LagvojqP0usRX3wQD6XLXqhRcQo7oAT2QGOrFRDXlhyE1OHEgmDzpoRKhi7Uf8nkqLs40I@cUo0jll0QfyEe6WI/Tbnr0MU7qmy7H@AA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Note that the version shown is only within 0.1% for <code>x</code> up to about <code>6</code>; for more accuracy the <code>⁸</code> could be changed to <code>χ</code> or even <code>φ</code> but it would make the resulting program inordinately slow. Explanation:</p>
-<pre><code>≧×⁸φ
-</code></pre>
-<p>Divide the interval into strips of width <code>1/8000</code> (or <code>1/10000</code> or <code>1/1000000</code>).</p>
-<pre><code>Ｆ×Ｎφ
-</code></pre>
-<p>Calculate the number of strips needed to reach an input of <code>x</code>.</p>
-<pre><code>⊞υ∨‹ιφ⁻⌊υ∕§υ±φι
-</code></pre>
-<p>For strips of <code>0&lt;x&lt;1</code> use a height of <code>1</code>, otherwise estimate the slope of the graph and use that to estimate the height of the next strip.</p>
-<pre><code>Ｉ⊟υ
-</code></pre>
-<p>Output the height of the last strip.</p>
-<p>A port of @Bubbler's Python answer weighs in at a massive 72 bytes:</p>
-<pre><code>ＮθＦ²¹⊞υ¬ιＦθ«≔⟦⁰⟧ηＦυ⊞η∕⁻κ§η±¹⁺ι⊘³ＵＭη∕κ∨¬λ±λ≔Ｅη⎇λκ⁻↨⊘¹⮌υ↨±⊘¹⮌ηυ»Ｉ↨⁻﹪θ¹⊘¹⮌υ
-</code></pre>
-<p><a href="https://tio.run/##bY49T8MwFEXn5le88VkyiNCRqZSBDgkRYkMMpnZrC8du/BGBEL/d2EmoOjDa591z714yt7dMp7Qzpxja2L8LhwO5qw7WAd7WBLroJUYKrQ2oyB8ZCHxXq4336mjw9eaNgsxoNbG4hCSFBzUqLrBRJnr8oLAJO8PFZ0GtOLIgsCaEUOh05orCI9Oj4LjOn0XXsNPW9j0z/EKWNU8OyxxNzhq9JJZFOVgSL8IZ5r5QU8ipecU98wKXnjoLnsUoXP6KZccEF@X55uJIlpr8jrnrp@qcMgG3zIfZOhc0lkdtcaBQ9P9Z4jQ2pfp6na5G/Qs" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
-<pre><code>Ｎθ
-</code></pre>
-<p>Input <code>x</code>.</p>
-<pre><code>Ｆ²¹⊞υ¬ι
-</code></pre>
-<p>Start with the polynomial for <code>0&lt;=x&lt;=1</code>.</p>
-<pre><code>Ｆθ«
-</code></pre>
-<p>Repeat <code>⌊x⌋</code> times.</p>
-<pre><code>≔⟦⁰⟧η
-</code></pre>
-<p>Start a new polynomial with a dummy constant term.</p>
-<pre><code>Ｆυ⊞η∕⁻κ§η±¹⁺ι⊘³
-</code></pre>
-<p>For each term of the previous polynomial, subtract the latest term of the new polynomial, divide it by the mid-point of the interval, and append it to the new polynomial.</p>
-<pre><code>ＵＭη∕κ∨¬λ±λ
-</code></pre>
-<p>Divide each term (except the dummy term) of the new polynomial by its negated index.</p>
-<pre><code>≔Ｅη⎇λκ⁻↨⊘¹⮌υ↨±⊘¹⮌ηυ
-</code></pre>
-<p>Calculate the constant term to replace the dummy term of the new polynomial and replace the old polynomial.</p>
-<pre><code>»Ｉ↨⁻﹪θ¹⊘¹⮌υ
-</code></pre>
-<p>Evaluate the polynomial at <code>x-⌊x⌋</code>.</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="noreferrer">K (ngn/k)</a>, 96 bytes</h1>
 <pre><code>{E[-0.5+1!x;(1,&amp;20){(E[0.5;x]+E[-0.5;w]%2),w:({z-y%x}[y]\x)%y*|!-#x}/1.5+!_x]}
