--- a/q/131503.html
+++ b/q/131503.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>055</td><td>R</td><td>240726T105056Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274455#274455">pajonk</a></td></tr>
+<tr d-ix="0"><td>053</td><td>R</td><td>240726T105056Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274455#274455">pajonk</a></td></tr>
 <tr d-ix="1"><td>076</td><td>R</td><td>240726T071436Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274450#274450">int 21h </a></td></tr>
 <tr d-ix="2"><td>056</td><td>JavaScript Node.js</td><td>240726T083830Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274453#274453">l4m2</a></td></tr>
 <tr d-ix="3"><td>015</td><td>Husk</td><td>201010T162303Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/212274#212274">Razetime</a></td></tr>
@@ -53,10 +53,10 @@
 <tr d-ix="24"><td>009</td><td>Jelly</td><td>170708T164144Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/131506#131506">Erik the</a></td></tr>
 <tr d-ix="25"><td>024</td><td>Mathematica</td><td>170708T164123Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/131505#131505">Martin E</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 55 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>f=\(n,i=1)`if`(sum(!(n+i)%%2:(n+i))&lt;2,i&lt;0,f(n,(i&lt;0)-i))
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 53 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>f=\(n,i=1,k=n+i)`if`(sum(!k%%2:k)&lt;2,i&lt;0,f(n,(i&lt;0)-i))
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=XZBBDoIwEEX3nqIuSNo4JLRQSg3cxAXGpEkTJQRk4Vnc4MJLeBNv4x9FFy7a-Z28_yfT622Y5_t0Dmn1dKHZyY5io1UbQyvH6STXsttElSRm-xaqNhTrjAI4CaFS9Bb7Y9z3_fEiDzIn4UhoFO1JGNRckyhQC_RLaAdd8fGKRFCrn9WSsOyzHMCU0cANP03JQdyzrKzHVWbuL4BxzbRnGBM1oyChHU-G9hyeMbjYPxt8P-IF" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=XZBBDoIwEEX3nqIuSNo4JLRQSg3cxAXGpEmDEiKy8CxucOElvIm3cX5EFy7a-Z28_yfT2_08z4_pEtLqZUOzkz3FRlPX9Juo2hhaOU4nue6SxGw7VRuKdUaBKclCpVGpxfwc98NwvMqDzEk4EpqL9iQM11yTKLgW3C9ZO9YVjlckglr9rJaEhc8iAJTRjBs8TYkg9CyU9XyVmfsLAK5Be8A8UQNlkrXDZNYe4RnAxf7Z4PsNbw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <a href="https://ato.pxeger.com/run?1=LYxRCoJAFEW3Mn0I8-ANNKOlxUy0AVegBkMyqKhIKtpa-rEPF9VuemEfl3M5F-7r_VhWx7Rg6zg4EX3ilLc4G3Vubwpzk5fOcavFnDS26-onT3kF_djwXeV5M2iFM2QAeTJpMRXlveDWmBayCxkhs__pNbYdd1iX_cB9ZCEySZAnZIroS2QBMSB_pB5Sj36hXe6RHQC2n2XZ-AU" rel="nofollow noreferrer"><s>77</s></a> 76 bytes</h1>
 <ul>
