--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240726T135229Z
+"   /golfscore                                      20240726T140027Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/6543.html">Display the result of doing 8 perfect shuffles o: 0006543</a>
 <a href="q/131503.html">Is it a weak prime?                             : 0131503</a>
 <a href="q/58243.html">16-bit binary grid                              : 0058243</a>
 <a href="q/274288.html">Compute Dickman                                 : 0274288</a>
