--- a/q/258511.html
+++ b/q/258511.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>105</td><td>Python 3</td><td>240723T080740Z</td><td><a href="https://codegolf.stackexchange.com/questions/258511/longest-valid-parentheses/274340#274340">Jitse</a></td></tr>
+<tr d-ix="0"><td>104</td><td>Python 3</td><td>240723T080740Z</td><td><a href="https://codegolf.stackexchange.com/questions/258511/longest-valid-parentheses/274340#274340">Jitse</a></td></tr>
 <tr d-ix="1"><td>006</td><td>Vyxal</td><td>230228T035820Z</td><td><a href="https://codegolf.stackexchange.com/questions/258511/longest-valid-parentheses/258513#258513">lyxal</a></td></tr>
 <tr d-ix="2"><td>013</td><td>Haskell + hgl</td><td>240723T013730Z</td><td><a href="https://codegolf.stackexchange.com/questions/258511/longest-valid-parentheses/274336#274336">Wheat Wi</a></td></tr>
 <tr d-ix="3"><td>046</td><td>APLDyalog Unicode</td><td>230228T045642Z</td><td><a href="https://codegolf.stackexchange.com/questions/258511/longest-valid-parentheses/258516#258516">user1069</a></td></tr>
@@ -47,12 +47,12 @@
 <tr d-ix="18"><td>030</td><td>BQN</td><td>230228T070141Z</td><td><a href="https://codegolf.stackexchange.com/questions/258511/longest-valid-parentheses/258520#258520">ovs</a></td></tr>
 <tr d-ix="19"><td>030</td><td>Raku</td><td>230228T061118Z</td><td><a href="https://codegolf.stackexchange.com/questions/258511/longest-valid-parentheses/258518#258518">Jo King</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 105 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 104 bytes</h1>
 
-<pre class="lang-python prettyprint-override"><code>f=lambda s:len(s)if g(s)else max(f(s[1:]),f(s[:-1]))
-g=lambda s:s&lt;'('or'()'in s and g(s.replace('()',''))
+<pre class="lang-python prettyprint-override"><code>f=lambda s:max(f(s[1:]),f(s[:-1]))if g(s)else len(s)
+g=lambda s:g(s.replace('()',''))if'()'in s else''&lt;s
 </code></pre>
-<p><a href="https://tio.run/##bY7BasMwDEDv@QrdLEEa2nXsYNYP2GkfMEpwW7v1cGRju7B9faaEtaHQk6QnPUnpt14ib8fR7YIZDicDRQfLWMg7OEuwoVgYzA86LF8bvad2SvRqsydqzotU3hWqmBWS8gwFDJ8mv8s2BXO0ODVapYhGFzMEzxZkLia5tSbdgFQJdqBU9x09o/Oh2jxbXd8fI1fjufR9O5lyGSBlz1W@Ek@WfnC6Vg2IhETwea1z@db8c3rkrzcu@On8zO/45b5mYesbgwX9AQ" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##bY7BasMwDIbveQrdLEEW2nXsYNYH2KkPUErwOrtzcWQTu9A@fSaHtaGw269P@n6UbuUn8maa3DaY4evbQNaDuaLDvF/rA7U16Jf1gcg7OGEmG7KFYFlic1okWXWjTcEcLSok1SpVlRo9Q4aqKfWRJxdHCJ4tCI5JelakG5ApwRaU6s7RMzofih3noq7vj5GL8Zz7vq0mkdyn0XORN8Ujmj45XYoGREIi2F3KPL43f5ye@dudC/73fuYP/PqoWdjqzmBBvw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <s>7</s> 6 bytes</h1>
 <pre><code>ǎ~øβ@G
