--- a/q/178984.html
+++ b/q/178984.html
@@ -26,15 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>Uiua</td><td>240725T220351Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/274443#274443">noodle p</a></td></tr>
-<tr d-ix="1"><td>205</td><td>R</td><td>190223T011111Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/180272#180272">ASCII-on</a></td></tr>
-<tr d-ix="2"><td>123</td><td>Wolfram Language Mathematica</td><td>190127T015007Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/179142#179142">lirtosia</a></td></tr>
-<tr d-ix="3"><td>159</td><td>Python 2</td><td>190122T140821Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178992#178992">TFeld</a></td></tr>
-<tr d-ix="4"><td>039</td><td>APL+WIN</td><td>190122T144917Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178994#178994">Graham</a></td></tr>
-<tr d-ix="5"><td>017</td><td>Jelly</td><td>190122T132743Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178990#178990">Jonathan</a></td></tr>
-<tr d-ix="6"><td>039</td><td>05AB1E</td><td>190122T095632Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178986#178986">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>041</td><td>J</td><td>240726T160517Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/274458#274458">noodle p</a></td></tr>
+<tr d-ix="1"><td>031</td><td>Uiua</td><td>240725T220351Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/274443#274443">noodle p</a></td></tr>
+<tr d-ix="2"><td>205</td><td>R</td><td>190223T011111Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/180272#180272">ASCII-on</a></td></tr>
+<tr d-ix="3"><td>123</td><td>Wolfram Language Mathematica</td><td>190127T015007Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/179142#179142">lirtosia</a></td></tr>
+<tr d-ix="4"><td>159</td><td>Python 2</td><td>190122T140821Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178992#178992">TFeld</a></td></tr>
+<tr d-ix="5"><td>039</td><td>APL+WIN</td><td>190122T144917Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178994#178994">Graham</a></td></tr>
+<tr d-ix="6"><td>017</td><td>Jelly</td><td>190122T132743Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178990#178990">Jonathan</a></td></tr>
+<tr d-ix="7"><td>039</td><td>05AB1E</td><td>190122T095632Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178986#178986">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 31 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 41 bytes</h1>
+<pre><code>(|.&quot;0 1~_1|.!.0#.)&amp;.(1&amp;|:)|.&quot;0 1~1|.!.0#.
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmtxU1OjRk_JQMGwLt6wRk9Rz0BZT1NNT8NQrcZKEyoBE4dq8NPkSlSw1VMwUTBSMFZQUTAEGmmoAKYMFGA8EIGgDBGUAZTHlZqcka-QppAIMXXBAggNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>I've been sitting on this solution for a while and I haven't found a good way to extract the repeated section <code>|.&quot;0 1~n|.!.0#.</code> (where <code>n</code> is <code>1</code> or <code>_1</code>). I did try using an explicit adverb:</p>
+<pre><code>G=:1 :'|.&quot;0 1~u|.!.0#.'
+_1 G&amp;.:(1&amp;|:)1 G]
+</code></pre>
+<p>which is a byte shorter, but it makes the byte count on ATO wrong.</p>
+</div>
+<div id="pu1" class="pu"><h1>Uiua, 31 bytes</h1>
 <pre><code>≡≡↻⊙≡⍜∩⍉≡↻:∩⬚0↻¯1⊙1⍜°⍉∩°⋯≡⊃⇌≡⇌.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_3__RiDihpAg4omh4omh4oa74oqZ4omh4o2c4oip4o2J4omh4oa7OuKIqeKsmjDihrvCrzHiipkx4o2cwrDijYniiKnCsOKLr-KJoeKKg-KHjOKJoeKHjC4KCkEg4oaQIFsKICBbWzEgMCAxXQogICBbMSAwIDBdXQoKICBbWzEgMCAxXQogICBbMCAxIDFdXQoKICBbWzAgMSAxXQogICBbMSAxIDFdXQoKICBbWzEgMSAwXQogICBbMSAxIDFdXQpdCkYgQQo=" rel="nofollow noreferrer">Try it out!</a></p>
@@ -52,7 +63,7 @@
 </code></pre>
 <p>Rotate the rows.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>226</s> <s>216</s> 205 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>226</s> <s>216</s> 205 bytes</h1>
 
 <p>-21 bytes thanks to <a href="https://codegolf.stackexchange.com/users/41725/digemall">digEmAll</a></p>
 
@@ -67,7 +78,7 @@ b}
 
 <p><a href="https://tio.run/##dU5dysIwEHz3HsKu3UC39ak0B/igNygR05ZCtMaPqA@inr0mrT8VkbCzs@zMbFzfyr492fpo9hY0FXLd7t0aL41szA6qXGicOTlRWOrk4bQDfWVEXQJnXRRmu0hWMBC/yFj4ra/5vItYzQow9JeLJGvKVFEBG@KsoarcEBmVCwcPSnroghUiji7BXr8N@jJR3kLbl2Wg3hJ6NFqqW//vjD1CC9o5fYYamGJiChgTv@qJ7/eYkWpIKaElhrzvMC8MkkDSH5Jpfjy5/MbP38TPq@kY2d8B" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>138</s> <s>131</s> <s>125</s> 123 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>138</s> <s>131</s> <s>125</s> 123 bytes</h1>
 
 <pre><code>t=Map@Thread
 m=MapThread[r=RotateLeft,#,2]&amp;
@@ -82,7 +93,7 @@ g=m@{t@m@{t@#,t@#~b~-1},#~b~1}&amp;
 <li><code>Fold[#+##&amp;]</code> is shorter than <code>IntegerDigits[#,2]</code> for converting from binary.</li>
 </ul>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>220</s> <s>211</s> <s>209</s> <s>185</s> <s>176</s> <s>174</s> <s>164</s> <s>161</s> 159 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>220</s> <s>211</s> <s>209</s> <s>185</s> <s>176</s> <s>174</s> <s>164</s> <s>161</s> 159 bytes</h1>
 
 
 
@@ -95,7 +106,7 @@ z=zip
 
 <p><sub>-2 bytes, thanks to Jonathan Allan</sub></p>
 </div>
-<div id="pu4" class="pu"><h1>APL+WIN, <s>53</s> 39 bytes</h1>
+<div id="pu5" class="pu"><h1>APL+WIN, <s>53</s> 39 bytes</h1>
 <p>Many thanks to Adám for saving 14 bytes</p>
 <pre><code>(1 0↓⍉2⊥⍉m⍪0)⌽(¯1 0↓2⊥2 1 3⍉0⍪m)⊖[2]m←⎕
 </code></pre>
@@ -138,7 +149,7 @@ z=zip
 1 1 0
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>&nbsp;18&nbsp;</s> 17 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>&nbsp;18&nbsp;</s> 17 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 
 <pre><code>ṙ""Ḅ}
 Z€çŻṖ$$Z€çḊ
@@ -169,7 +180,7 @@ Z€           - transpose €ach (layer of M)
 
 <p><sub>Note: <code><span class="math-container">$$</code> (or possibly <code>$$</span> ... $$</code>?) seems to mess up the code-block formatting (but only once posted, not in the preview), so I added a space to make my life easier.</sub></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>41</s> 39 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>41</s> 39 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>εNĀiø¹N&lt;èøJC‚øε`._}ø}N¹g&lt;Êi¹N&gt;èJC‚øε`._
 </code></pre>
 <p>This feels way too long.. Can definitely be golfed some more.</p>
