--- a/q/131503.html
+++ b/q/131503.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>093</td><td>Bash</td><td>240726T135229Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274456#274456">Themooni</a></td></tr>
-<tr d-ix="1"><td>052</td><td>R</td><td>240726T105056Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274455#274455">pajonk</a></td></tr>
+<tr d-ix="0"><td>052</td><td>R</td><td>240726T105056Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274455#274455">pajonk</a></td></tr>
+<tr d-ix="1"><td>093</td><td>Bash</td><td>240726T135229Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274456#274456">Themooni</a></td></tr>
 <tr d-ix="2"><td>076</td><td>R</td><td>240726T071436Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274450#274450">int 21h </a></td></tr>
 <tr d-ix="3"><td>056</td><td>JavaScript Node.js</td><td>240726T083830Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/274453#274453">l4m2</a></td></tr>
 <tr d-ix="4"><td>015</td><td>Husk</td><td>201010T162303Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/212274#212274">Razetime</a></td></tr>
@@ -54,7 +54,18 @@
 <tr d-ix="25"><td>009</td><td>Jelly</td><td>170708T164144Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/131506#131506">Erik the</a></td></tr>
 <tr d-ix="26"><td>024</td><td>Mathematica</td><td>170708T164123Z</td><td><a href="https://codegolf.stackexchange.com/questions/131503/is-it-a-weak-prime/131505#131505">Martin E</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 93 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 52 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>`?`=\(n,i=1,k=n+i)`if`(sum(!k%%2:k)&lt;2,i&lt;0,n?(i&lt;0)-i)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=XY9BCsIwEEX3niIuCglOoUmbppGGXsRFRAiE2lKsXXgWN1XwEt7E2zhDiwsXyf8Z3v9D7o_L_AzuNV1DWn0K33h34D1EJ6F1_S4KH4Pn49TxbZskat-KWkGsM-gbjiLSKNbsezwOw_nGTzwHZoBJFGmBKdRcAitQC5yX6A36io4VwILY_KIamKacpgKilERc0VOVVEQzTU5bvMrM_BUQLom2BONGSSiS6A1tRm-pPCNwjS8_mOdFvw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<hr />
+<h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 65 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(n,i=n:-n,m=i[sapply(n+i,\(x)sum(!x%%2:x)&lt;2)])m[order(m^2)[2]]&lt;0
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=XY9BDoIwEEX3nqIuSNo4JLRQoAQWngMwMSoJiUUCkuBZ3KCJl_Am3saZQFy4aP_v5P0_6f3RTc8qew3Xyo0_24I3UGdN4jZgszrv9217vvFmU0PBR9EPlq9Hx1HJKFIlSmHzS3c8ddzulMhVWabeUvRekgfuA4uASRRpgClUXwILUAOch-gj9DEdI4BVYvWLamCacpoKiFIScUVPFVIRzTQ5bfAKveivgHBJtCEYN0pCkUQf0Wb0hso9Apf4_INpmvUL" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>No recursion or loops.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 93 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>n()(for((i=$1;`factor $i|wc -w`&gt;2;i+=$2)){
 :;}
 echo $i)
@@ -71,11 +82,6 @@ echo $i) #echo the found prime, end function declaration
 ((`n $[$1+2] 2`+`n $[$1-2] -2`&gt;2*$1)) #test if prevPrime(n) + nextPrime(n) &gt; 2n, using our function and feeding it n+2,2 and n-2,-2 as parameters.
 #implicit: function or script exit code is set as the exit code of the last command.
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 52 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>`?`=\(n,i=1,k=n+i)`if`(sum(!k%%2:k)&lt;2,i&lt;0,n?(i&lt;0)-i)
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=XY9BCsIwEEX3niIuCglOoUmbppGGXsRFRAiE2lKsXXgWN1XwEt7E2zhDiwsXyf8Z3v9D7o_L_AzuNV1DWn0K33h34D1EJ6F1_S4KH4Pn49TxbZskat-KWkGsM-gbjiLSKNbsezwOw_nGTzwHZoBJFGmBKdRcAitQC5yX6A36io4VwILY_KIamKacpgKilERc0VOVVEQzTU5bvMrM_BUQLom2BONGSSiS6A1tRm-pPCNwjS8_mOdFvw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <a href="https://ato.pxeger.com/run?1=LYxRCoJAFEW3Mn0I8-ANNKOlxUy0AVegBkMyqKhIKtpa-rEPF9VuemEfl3M5F-7r_VhWx7Rg6zg4EX3ilLc4G3Vubwpzk5fOcavFnDS26-onT3kF_djwXeV5M2iFM2QAeTJpMRXlveDWmBayCxkhs__pNbYdd1iX_cB9ZCEySZAnZIroS2QBMSB_pB5Sj36hXe6RHQC2n2XZ-AU" rel="nofollow noreferrer"><s>77</s></a> 76 bytes</h1>
 <ul>
