--- a/q/274389.html
+++ b/q/274389.html
@@ -59,6 +59,20 @@
 <li><code>ʃ</code>: Parse the input string and return it.</li>
 </ul>
 <p>This finds occurrences of <code>xyx</code> where <code>y</code> is made up of a subset of the characters of <code>x</code>, and replaces them with <code>x</code> until a fixed point is reached. <code>y</code> can potentially be empty here.</p>
+<h1>Reflection</h1>
+<p>This is ok. I'm not too happy with it but I initially expected much worse. This really has more of a glue problem than anything else.</p>
+<ul>
+<li>I could add <code>l2 aT</code> and <code>l2 aK</code>, they will probably be used again sometime.</li>
+<li>I have <code>(?*&gt;)</code> and <code>(&lt;*?)</code> for <code>aT&lt;py</code> and <code>aK^.py</code>. I could use <code>(**&gt;) = aT&lt;my</code> and <code>(&lt;**) = aK^.py</code> and while I'm at it <code>(+*&gt;) = aT&lt;so</code> and <code>(&lt;*+) = aK^.so</code>.</li>
+</ul>
+<p>The above are minor fixes, but I think the thing that would <em>really</em> fix the glue problem is having a version of <code>(&gt;~)</code> which just returns the result from the left-hand side instead of the right hand-side. So:</p>
+<pre><code>(&lt;*~) =
+  f' $ fb &lt; ap pM
+</code></pre>
+<p>In which case this could look like:</p>
+<pre><code>yyc$sk$h_&lt;*~(mY&lt;xys)&gt;~ʃ
+</code></pre>
+<p>Although this wouldn't make this answer shorter than implementing either of the above, this does seem like the solution lightest on the glue and an operation which has a large reuse potential</p>
 <h1>Old versions</h1>
 <p>Here are some old versions which use the incorrect algorithm given in the question and currently used by all the other answers:</p>
 <h2>Parser, <s>21</s> 13 bytes</h2>
