--- a/q/274389.html
+++ b/q/274389.html
@@ -66,11 +66,11 @@
 <li>I have <code>(?*&gt;)</code> and <code>(&lt;*?)</code> for <code>aT&lt;py</code> and <code>aK^.py</code>. I could use <code>(**&gt;) = aT&lt;my</code> and <code>(&lt;**) = aK^.py</code> and while I'm at it <code>(+*&gt;) = aT&lt;so</code> and <code>(&lt;*+) = aK^.so</code>.</li>
 </ul>
 <p>The above are minor fixes, but I think the thing that would <em>really</em> fix the glue problem is having a version of <code>(&gt;~)</code> which just returns the result from the left-hand side instead of the right hand-side. So:</p>
-<pre><code>(&lt;*~) =
+<pre><code>(&lt;~) =
   f' $ fb &lt; ap pM
 </code></pre>
 <p>In which case this could look like:</p>
-<pre><code>yyc$sk$h_&lt;*~(mY&lt;xys)&gt;~ʃ
+<pre><code>yyc$sk$h_&lt;~(mY&lt;xys)&gt;~ʃ
 </code></pre>
 <p>Although this wouldn't make this answer shorter than implementing either of the above, this does seem like the solution lightest on the glue and an operation which has a large reuse potential</p>
 <h1>Old versions</h1>
