--- a/q/274448.html
+++ b/q/274448.html
@@ -36,7 +36,7 @@
 <pre><code>+dṛ¦J‘$F+2/ƲÐLœr0
 </code></pre>
 <p>A dyadic Link that accepts factoriadic fractions as lists of integers on each side and yields their sum.</p>
-<p><strong><a href="https://tio.run/##y0rNyan8/1875eHO2YeWeT1qmKHipm2kf2zT4Qk@RycXGfw/vPzopIc7Z/z/H22qo2AERiY6CoZAFPs/2gzCAiMDHQWzWAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<p><strong><a href="https://tio.run/##y0rNyan8/1875eHO2YeWeT1qmKHipm2kf2zT4Qk@RycXGfw/vPzopIc7Z/z/H22qo2AERiY6CoZAFPs/2gzCAiMDHQWzWAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8/1875eHO2YeWeT1qmKHipm2kf2zT4Qk@RycXGfzXObxc/@ikhztnPGpak/WoYY6CrZ3Co4a5mpH//0dHR8fqKETHxupwKUCYhlC2gY6CEYiviy4ApuFChghRQ4QEkAkSAOs3AgrrKBiDZGIB" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
 <h4>How?</h4>
 <p>Repeated carrying...</p>
 <pre><code>+dṛ¦J‘$F+2/ƲÐLœr0 - Link: list of integers, A; list of integers, B
