--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240726T202151Z
+"   /golfscore                                      20240726T204252Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
 <a href="q/274448.html">Factoriadic Fraction Addition                   : 0274448</a>
+<a href="q/6596.html">Tips for golfing in J                           : 0006596</a>
 <a href="q/250918.html">Cartesian - polar conversion couple             : 0250918</a>
 <a href="q/274389.html">Reduce a string up to idempotency               : 0274389</a>
 <a href="q/269632.html">Implement the simplest functional programming la: 0269632</a>
