--- a/q/6543.html
+++ b/q/6543.html
@@ -46,11 +46,14 @@
 <tr d-ix="17"><td>103</td><td>Haskell</td><td>120705T124934Z</td><td><a href="https://codegolf.stackexchange.com/questions/6543/display-the-result-of-doing-8-perfect-shuffles-of-a-deck-of-cards/6557#6557">ceased t</a></td></tr>
 <tr d-ix="18"><td>179</td><td>Python3</td><td>120705T004854Z</td><td><a href="https://codegolf.stackexchange.com/questions/6543/display-the-result-of-doing-8-perfect-shuffles-of-a-deck-of-cards/6552#6552">Ev_genus</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 44 nibbles 22 bytes)</h1>
+<div id="pu0" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 44 nibbles (22 bytes)</h1>
 <pre><code>: `. ;`*`/13:+~,9`=`D-20$ +`'`/~$ $ 33de601b3
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWN3WtFBL0FKwTtBL0DY2ttOt0LBNsE1x0jQxUFLQT1BP061QUVBSMjVNSzQwMk4whmqB6YWYAAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre><code>                   `D-20   33de601b3  # the string &quot;jkqacdhs&quot;
+<p>Card numbers represented as <code>a 2 3 4 5 6 7 8 9 10 j q k</code>, suits as <code>c d h s</code>.</p>
+<p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWN7WtFBL0FKwTtBL0DY2tdAwNEmwTXHSNDFQUtBPUE_TrVBRUFIwszVPTjJOMIVqgOmEmAAA" rel="nofollow noreferrer">-4 nibbles (2 bytes)</a> by using <code>1</code> for ace instead of <code>a</code>.</p>
+<pre><code>: `. ;`*`/13:+~,9`=`D-20$ +`'`/~$ $ 33de601b3
+                   `D-20   33de601b3  # the string &quot;jkqacdhs&quot;
                  `=     $             # split into length-1 substrings
             :+~,9                     # prepend strings &quot;2&quot;..&quot;10&quot;
         `/13                          # and split into length 13 groups
