--- a/q/178984.html
+++ b/q/178984.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>J</td><td>240726T160517Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/274458#274458">noodle p</a></td></tr>
-<tr d-ix="1"><td>031</td><td>Uiua</td><td>240725T220351Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/274443#274443">noodle p</a></td></tr>
+<tr d-ix="0"><td>029</td><td>Uiua</td><td>240725T220351Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/274443#274443">noodle p</a></td></tr>
+<tr d-ix="1"><td>041</td><td>J</td><td>240726T160517Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/274458#274458">noodle p</a></td></tr>
 <tr d-ix="2"><td>205</td><td>R</td><td>190223T011111Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/180272#180272">ASCII-on</a></td></tr>
 <tr d-ix="3"><td>123</td><td>Wolfram Language Mathematica</td><td>190127T015007Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/179142#179142">lirtosia</a></td></tr>
 <tr d-ix="4"><td>159</td><td>Python 2</td><td>190122T140821Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178992#178992">TFeld</a></td></tr>
@@ -35,7 +35,25 @@
 <tr d-ix="6"><td>017</td><td>Jelly</td><td>190122T132743Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178990#178990">Jonathan</a></td></tr>
 <tr d-ix="7"><td>039</td><td>05AB1E</td><td>190122T095632Z</td><td><a href="https://codegolf.stackexchange.com/questions/178984/binary-self-rotation/178986#178986">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 41 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, <s>31</s> 29 bytes</h1>
+<pre><code>≡≡↻⊙≡⍜∩⍉≡↻∩⬚0↻1⊙¯1∩°⋯∩≡≡⇌⟜≡⍉.
+</code></pre>
+<p><a href="https://uiua.org/pad?src=0_12_0-dev_3__RiDihpAg4omh4omh4oa74oqZ4omh4o2c4oip4o2J4omh4oa74oip4qyaMOKGuzHiipnCrzHiiKnCsOKLr-KIqeKJoeKJoeKHjOKfnOKJoeKNiS4KCkEg4oaQIFsKICBbWzEgMCAxXQogICBbMSAwIDBdXQoKICBbWzEgMCAxXQogICBbMCAxIDFdXQoKICBbWzAgMSAxXQogICBbMSAxIDFdXQoKICBbWzEgMSAwXQogICBbMSAxIDFdXQpdCkYgQQo=" rel="nofollow noreferrer">Try it out!</a></p>
+<p>Explanation:</p>
+<pre><code>∩°⋯∩≡≡⇌⟜≡⍉.
+</code></pre>
+<p>Convert the rows and the columns to binary. <code>⋯</code> (bits) uses little-endian binary, so the rows and the columns have to be reversed first.</p>
+<pre><code>∩⬚0↻1⊙¯1
+</code></pre>
+<p>Rotate the array of the columns up by one and the array of the rows down by one, filling with zeroes instead of cycling.</p>
+<pre><code>⊙≡⍜∩⍉≡↻
+</code></pre>
+<p>Rotate the columns.</p>
+<pre><code>≡≡↻
+</code></pre>
+<p>Rotate the rows.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 41 bytes</h1>
 <pre><code>(|.&quot;0 1~_1|.!.0#.)&amp;.(1&amp;|:)|.&quot;0 1~1|.!.0#.
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmtxU1OjRk_JQMGwLt6wRk9Rz0BZT1NNT8NQrcZKEyoBE4dq8NPkSlSw1VMwUTBSMFZQUTAEGmmoAKYMFGA8EIGgDBGUAZTHlZqcka-QppAIMXXBAggNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -44,24 +62,6 @@
 _1 G&amp;.:(1&amp;|:)1 G]
 </code></pre>
 <p>which is a byte shorter, but it makes the byte count on ATO wrong.</p>
-</div>
-<div id="pu1" class="pu"><h1>Uiua, 31 bytes</h1>
-<pre><code>≡≡↻⊙≡⍜∩⍉≡↻:∩⬚0↻¯1⊙1⍜°⍉∩°⋯≡⊃⇌≡⇌.
-</code></pre>
-<p><a href="https://uiua.org/pad?src=0_12_0-dev_3__RiDihpAg4omh4omh4oa74oqZ4omh4o2c4oip4o2J4omh4oa7OuKIqeKsmjDihrvCrzHiipkx4o2cwrDijYniiKnCsOKLr-KJoeKKg-KHjOKJoeKHjC4KCkEg4oaQIFsKICBbWzEgMCAxXQogICBbMSAwIDBdXQoKICBbWzEgMCAxXQogICBbMCAxIDFdXQoKICBbWzAgMSAxXQogICBbMSAxIDFdXQoKICBbWzEgMSAwXQogICBbMSAxIDFdXQpdCkYgQQo=" rel="nofollow noreferrer">Try it out!</a></p>
-<p>Explanation:</p>
-<pre><code>⍜°⍉∩°⋯≡⊃⇌≡⇌.
-</code></pre>
-<p>Convert the rows and the columns to binary. <code>⋯</code> (bits) uses little-endian binary, so the rows and the columns have to be reversed first.</p>
-<pre><code>∩⬚0↻¯1⊙1
-</code></pre>
-<p>Rotate the array of the columns up by one and the array of the rows down by one, filling with zeroes instead of cycling.</p>
-<pre><code>⊙≡⍜∩⍉≡↻:
-</code></pre>
-<p>Rotate the columns.</p>
-<pre><code>≡≡↻
-</code></pre>
-<p>Rotate the rows.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>226</s> <s>216</s> 205 bytes</h1>
 
