--- a/q/250918.html
+++ b/q/250918.html
@@ -58,6 +58,18 @@
 <pre><code>×[°∠]
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__ZiDihpAgw5dbwrDiiKBdCmYgwq8wLjkzOTU3IDQuMjM2MzIKZiDCrzAuOTI3MyA1MDAwCmYgMCAwCmYgMiA1CmYgMC43ODU0IDAuMQo=" rel="nofollow noreferrer">Try it!</a></p>
+<h3>Explanations</h3>
+<pre><code>⊃(⌵ℂ)∠
+     ∠ # find atan of y and x (ϕ)
+⊃      # alongside
+ (⌵ )  # the magnitude
+   ℂ   # of y+xi (r)
+</code></pre>
+<pre><code>×[°∠]
+ [  ] # create an array of
+  °∠  # sin(ϕ) and cos(ϕ) (un-arctangent)
+×     # and multiply by r
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 21 bytes in total (SBCS).</h2>
 <pre><code>,⟄⍂euL⍄⑤⍵Ⓧq
