--- a/q/274448.html
+++ b/q/274448.html
@@ -26,13 +26,33 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>Jelly</td><td>240726T201505Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274460#274460">Jonathan</a></td></tr>
-<tr d-ix="1"><td>018</td><td>Nekomata + 1</td><td>240726T091817Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274454#274454">alephalp</a></td></tr>
-<tr d-ix="2"><td>057</td><td>Charcoal</td><td>240726T083053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274452#274452">Neil</a></td></tr>
-<tr d-ix="3"><td>093</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
-<tr d-ix="4"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
+<tr d-ix="0"><td>166</td><td>JavaScript Node.js</td><td>240727T010056Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274462#274462">Andrew B</a></td></tr>
+<tr d-ix="1"><td>017</td><td>Jelly</td><td>240726T201505Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274460#274460">Jonathan</a></td></tr>
+<tr d-ix="2"><td>018</td><td>Nekomata + 1</td><td>240726T091817Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274454#274454">alephalp</a></td></tr>
+<tr d-ix="3"><td>057</td><td>Charcoal</td><td>240726T083053Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274452#274452">Neil</a></td></tr>
+<tr d-ix="4"><td>093</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
+<tr d-ix="5"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 166 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>(a,b)=&gt;{b.map((x,i)=&gt;a[i]=(a[i]?a[i]:0)+x);c=0;for(i=(y=a.length)-1;i&gt;0;i--){d=(e=a[i]+c)%(z=i+2);c=e/z|0;a[i]=d};y?a[0]+=c:0;while(a[a.length-1]==0)a.pop();return a}
+</code></pre>
+<p><a href="https://tio.run/##jY3NboMwEITvPAWXSmvAYHPIIdamD4J8cIxJXFGMCG3z0zw7tdNWlVqochnNzqedeVKv6qAH24@0c7WZGpxAZVuCm8s2f1Y9wDGz/lKVlQhBH4OsGUmPRGhkonEDWIQTqrw13W7cE8qF3TBhKSWXGsFg@Eg1eYAz2rQMb6Y4vzNxK62v4uQ7mUxRr5l429vW@KHvNsolIiMq710PRAxmfBm6WF0n7bqDa03euh00UMmskoREf1M@E7Os9IQuo6BzjH9RvsAXa314R@s8/WeRrjxcBVAkSVTJqIp5HJTyLC5vzpvP6Df4ccybGS@jJCmmDw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Expanded, with comments:</p>
+<p>(a,b)=&gt;{
+b.map((x,i)=&gt;a[i]=(a[i]?a[i]:0)+x); //add elements in arrays a and b, allowing for different size arrays.</p>
+<p>c=0;</p>
+<p>for(i=(y=a.length)-1;i&gt;0;i--){ //adjust each value so it fits within the max for that digit, carrying to the left as required.</p>
+<p>d=(e=a[i]+c)%(z=i+2); //use mod for the digit</p>
+<p>c=e/z|0; //use divide and round for the carry</p>
+<p>a[i]=d //put the digit back in the array</p>
+<p>};</p>
+<p>y?a[0]+=c:0; //add last remaining carry to the first digit</p>
+<p>while(a[a.length-1]==0)a.pop(); //remove trailing zeros</p>
+<p>return a //return result</p>
+<p>}</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>+dṛ¦J‘$F+2/ƲÐLœr0
 </code></pre>
 <p>A dyadic Link that accepts factoriadic fractions as lists of integers on each side and yields their sum.</p>
@@ -48,7 +68,7 @@
      ‘            -       increment -&gt; I = [2,3,...,N+1]
    ¦              -     sparse application (to {V in S} with {i in I})...
   ṛ               -     ...to indices: right argument = I
-                           i.e. apply to all but first element (N+1 has no effect)
+                           i.e. apply to all but the first element
  d                -     ...action: {V} divmod {i} -&gt; [V//i, V%i]
        F          -     flatten -&gt; [a+x, (b+y)//3, (b+y)%3, (c+z)//4, (c+z)%4, ...]
          2/       -     2-wise reduce by:
@@ -56,7 +76,7 @@
               œr0 - trim trailing zeros
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-1</code>, 18 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-1</code>, 18 bytes</h1>
 <pre><code>+:#ᵑ{CU$x3+þç++;ž¿
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpKuoVLsgqWlJWm6Fju0rZQfbp1Y7RyqUmGsfXjf4eXa2tZH9x3av6Q4KbkYqmjBTePoWIXoWC4QaQikDHSMgCxdBBNEgtiGUB6IhugFAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -81,7 +101,7 @@
 </code></pre>
 <p>The last step <code>;ž¿</code> is nondeterministic, so we need to add the <code>-1</code> flag to return only the first result, where all trailing 0s are removed.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 57 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 57 bytes</h1>
 <pre><code>Ｆ⁻ＬηＬθ⊞θ⁰≔⁰ζＦ⮌Ｅηκ«≧⁺⁺§θι⊟ηζ§≔θι⎇ι﹪ζ⁺²ιζ≧÷⁺²ιζ»Ｗ∧θ¬↨θ⁰⊟θＩθ
 </code></pre>
 <p><a href="https://tio.run/##XVBNawMhFDxnf8U7PsFCmmtP2/YS6IYl9BZykKxdpaKJuts2Ib/dPjWU0IvMwHy88aCEPzhhUvpwHrDTdgr4Ju0YFSrG4QZPjDHop0CIw5I9NW0IerS45HAmVrxbOUsfJHbiiIrDZ7ZcmgXRKt7qUUXszRQ45BfbuLaD/M6Rmqp6Rz7GauKieu4lHN6lt8L/IMHODZNxeL5FrXJEsWbvv8q1ja961oO8F9eaa/OltJGArR1yycZFfBY0oswso722dDXddsrZlb6IEAtPabejP3jksNpz@IP79DCbXw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -111,14 +131,14 @@
 <p>Output the final result.</p>
 <p>Bonus 136-byte <a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a> solution: <a href="https://tio.run/##RY29DgIxDIN3P0WHgpK2VJey8jPyEL2cDgkGFgbEeO9e0i4ssT/Lij/P7@t9bzu6rU2RnGKuyaFifkT4gAVVjeNqN5METo5y6MBGyTG8@KNx9QU9hnWtcz2diRJvmSMbHMpFOIrQlQovDLGfvTPXzbEE@LyH7U4aFdpa36w6pquYTsmV7ocOlH8y7A8" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Does not work with negative numbers.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a=0,...A],[b=c=0,...B],i)=&gt;k=A+B||a|b?f(A,B,i+1||2)!=-(b+=c+a,c=b&gt;i,b+=c*~i)?[b,...k]:k:A
 </code></pre>
 <p><a href="https://tio.run/##dc1BCsMgEAXQfW/RndaJxCxTJsFcQ1yojcUaYmhKV9Krp0nbZQrDwP@PYW7maWZ3D9OjGNOlXzyuQ5TBEjjnUoOy6L6h0xAoNhEl63I22baeSOggMJFzRY9YEMvQMQMObRNgC6dXoK2y23nUdazlcj64NM5p6PmQrsQTtb7QlO60YqcuoVql@E/b3jPxU/Hx5Q0" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><code>==-</code> if former is <code>[]</code> and latter is 0. Former is never negative and latter, including <code>-</code>, is never positive</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu5" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>35 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>Assumes index origin 0.</p>
 <pre><code>{x↓⍨-⊥⍨0=x←(⊢⊤⊥∘m)(⊢+2××)⍳≢m←+⌿↑⍺⍵}
 </code></pre>
