--- a/q/274448.html
+++ b/q/274448.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>131</td><td>R</td><td>240727T110821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274467#274467">Dominic </a></td></tr>
+<tr d-ix="0"><td>129</td><td>R</td><td>240727T110821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274467#274467">Dominic </a></td></tr>
 <tr d-ix="1"><td>166</td><td>JavaScript Node.js</td><td>240727T010056Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274462#274462">Andrew B</a></td></tr>
 <tr d-ix="2"><td>017</td><td>Jelly</td><td>240726T201505Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274460#274460">Jonathan</a></td></tr>
 <tr d-ix="3"><td>018</td><td>Nekomata + 1</td><td>240726T091817Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274454#274454">alephalp</a></td></tr>
@@ -34,14 +34,14 @@
 <tr d-ix="5"><td>093</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
 <tr d-ix="6"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 131 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 129 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(x,y,s=seq){e=s(a&lt;-c(x,y,0)&amp;0)
 a[s(!x)]=x
 a[b]=a[b&lt;-s(!y)]+y
 while({b=(a&gt;e);any(a-(a=a-b*e-b+c(b[-1],0)))})1
-a[seq(l=max(e*!!a))]}
+a[s(l=max(e*!!a))]}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=fY9PisJQDMb3PUWLIIk20OdqQJ8X0YfkvUan4DjYdpgWceUx3NTF7Occ3sDbTP-MCIpuki8fv3wkx1Na_XIcL5bs8s804Thx-ucrX9Lb5TCHIizDTGeyxZ3oDHhCrvUi7Efo8SyDoECji1pao-syodoq0QxL7_s9WQvsrAaeCo55UwITsGayAyE7dGBnpEydhbhH1aTJFtb6gwuQQRAwotn_n3K-OxGSTS4rSSHC8CbR7_m3yXux40C1tHqAHEThqAGoI0j5o-dQ09qcJ0nqiqkr6HUfVVXX_wA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=fY9NCsJADIX3PUWLIIk20HEl6HgRHSQzHbXgD7YVW8SF53BTF-49hzfwNtZWERTdJC-PL4_keIqLC4fheMImXcURh5GR5006oe7tMILMz_1EJnaNOysT4D6ZyguwGaDDwwS8DJXMSqmVLEufSitH1c6d7SyaW9hpCTyw2ONlDkzAkkm3LOm2AT0kocosxD2KKm0uF5yBbXkeI6r985Drx4EQLVM7tTEE6L8lug33PTl_dgyIihZfkIHA7zwAqgkSbuc39GhVzo8k8cLEC3Tqj4qi7nc" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 166 bytes</h1>
 
