--- a/q/274448.html
+++ b/q/274448.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>129</td><td>R</td><td>240727T110821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274467#274467">Dominic </a></td></tr>
+<tr d-ix="0"><td>125</td><td>R</td><td>240727T110821Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274467#274467">Dominic </a></td></tr>
 <tr d-ix="1"><td>166</td><td>JavaScript Node.js</td><td>240727T010056Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274462#274462">Andrew B</a></td></tr>
 <tr d-ix="2"><td>017</td><td>Jelly</td><td>240726T201505Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274460#274460">Jonathan</a></td></tr>
 <tr d-ix="3"><td>018</td><td>Nekomata + 1</td><td>240726T091817Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274454#274454">alephalp</a></td></tr>
@@ -34,14 +34,26 @@
 <tr d-ix="5"><td>093</td><td>JavaScript Node.js</td><td>240726T064144Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274449#274449">l4m2</a></td></tr>
 <tr d-ix="6"><td>035</td><td>APLDyalog Unicode</td><td>240726T081812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274448/factoriadic-fraction-addition/274451#274451">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 129 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(x,y,s=seq){e=s(a&lt;-c(x,y,0)&amp;0)
-a[s(!x)]=x
-a[b]=a[b&lt;-s(!y)]+y
-while({b=(a&gt;e);any(a-(a=a-b*e-b+c(b[-1],0)))})1
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 125 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(v,w,`^`=c,y=w^0,s=seq){a=(!s(x&lt;-v^0)-(e=s(x+y)))*x+y*!s(y)-e
+while(any(a-(a=a-(b=(a&gt;e))*e-b+b[-1]^0)))1
 a[s(l=max(e*!!a))]}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=fY9NCsJADIX3PUWLIIk20HEl6HgRHSQzHbXgD7YVW8SF53BTF-49hzfwNtZWERTdJC-PL4_keIqLC4fheMImXcURh5GR5006oe7tMILMz_1EJnaNOysT4D6ZyguwGaDDwwS8DJXMSqmVLEufSitH1c6d7SyaW9hpCTyw2ONlDkzAkkm3LOm2AT0kocosxD2KKm0uF5yBbXkeI6r985Drx4EQLVM7tTEE6L8lug33PTl_dgyIihZfkIHA7zwAqgkSbuc39GhVzo8k8cLEC3Tqj4qi7nc" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=fY9BbsJADEX3OUWibuwwljKsWNS9CCXFmRgaiVI1SQlRxUm6SRfdcw5u0Nt0ICAkEGz8bfn9L_v7p-y2kucvM3H1e1lIXjj-_axnNPrbPMPKNGaaTtmZlps0MRVX-oFfwhBVsH6kVZoggbIfBi0ixl5iv2qRNGhei4WCLFsQAmFfMgZ5Uo8pZYNsTHbi_Yg2kHEFC36TNWgcRYI42RyP2F0cB8Wy1rmWkKA5txg-hOcpuONxYA-0vYIcJGa4B6gnyIbD29BeDjk3kuwJsycw6D_qul7_AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><strong>How?</strong> - ungolfed version:</p>
+<pre><code>add_factoriadic=function(x,y){
+    a&lt;-c(x,y,0)&amp;0                             # define a as long-enough vector of zeros 
+    a[seq(!x)]=x                              # add x to appropriate elements
+    a[seq(!y)]=a[seq(!y)]+y                   # add y to appropriate elements
+    while({                                   # repeat while value of a changes:
+        b=(a&gt;seq(a))                          #   b = carry digits
+        any(a-                                #   check whether a changes by
+          (a=a+c(b[-1],0)                     #     add carry digits at position to left
+              -b*(seq(a)+1)))                 #     and subtract carried values
+    })1                                       #   (do nothing else)
+    a[seq(length=max(seq(a)*!!a))]            # finally, output a without trailing zeros
+}
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 166 bytes</h1>
 
