--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240727T144345Z
+"   /golfscore                                      20240727T160000Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/103377.html">Appending String Lengths                        : 0103377</a>
 <a href="q/73091.html">Implement the divisibility-by-7 rule            : 0073091</a>
 <a href="q/133365.html">Find the closest Fibonacci Number               : 0133365</a>
 <a href="q/274448.html">Factoriadic Fraction Addition                   : 0274448</a>
