--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240727T170304Z
+"   /golfscore                                      20240727T180000Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/125282.html">Goodbye Cruel World!                            : 0125282</a>
 <a href="q/17005.html">Produce the number 2014 without any numbers in y: 0017005</a>
 <a href="q/178984.html">Binary self-rotation                            : 0178984</a>
 <a href="q/4.html">ROT-13 transform standard input                 : 0000004</a>
