--- a/q/263135.html
+++ b/q/263135.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td>R</td><td>240725T145127Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274437#274437">David Jo</a></td></tr>
-<tr d-ix="1"><td>067</td><td>Raku Perl 6 rakudo</td><td>240723T221122Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274375#274375">bb94</a></td></tr>
-<tr d-ix="2"><td>117</td><td>Setanta</td><td>240723T214409Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274373#274373">bb94</a></td></tr>
-<tr d-ix="3"><td>057</td><td>Perl 5</td><td>240722T082434Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274318#274318">Donat</a></td></tr>
+<tr d-ix="0"><td>057</td><td>Perl 5</td><td>240722T082434Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274318#274318">Donat</a></td></tr>
+<tr d-ix="1"><td>nan</td><td>R</td><td>240725T145127Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274437#274437">David Jo</a></td></tr>
+<tr d-ix="2"><td>067</td><td>Raku Perl 6 rakudo</td><td>240723T221122Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274375#274375">bb94</a></td></tr>
+<tr d-ix="3"><td>117</td><td>Setanta</td><td>240723T214409Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274373#274373">bb94</a></td></tr>
 <tr d-ix="4"><td>016</td><td>Japt R</td><td>240722T171948Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274332#274332">Shaggy</a></td></tr>
 <tr d-ix="5"><td>065</td><td>Perl 5</td><td>230729T070153Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263490#263490">good old</a></td></tr>
 <tr d-ix="6"><td>045</td><td>J</td><td>230728T083545Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263454#263454">Jonah</a></td></tr>
@@ -55,26 +55,7 @@
 <tr d-ix="26"><td>156</td><td>Swift</td><td>230721T175718Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263148#263148">Bbrk24</a></td></tr>
 <tr d-ix="27"><td>278</td><td>Vyxal</td><td>230721T162133Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263137#263137">The Empt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>R, <del>123 Bytes</del> 113 bytes</h1>
-<pre><code>p=paste0;for(i in s&lt;-c(1:9,8:1))message(rep(&quot; &quot;,(i-6)*(i-5)),p(s[c(1:i,i:1-1)],p(rep(&quot; &quot;,abs(i-9)),collapse=&quot;&quot;)))
-</code></pre>
-<p><code>rep(&quot; &quot;,(i-6)*(i-5))</code> gives the trailing white spaces</p>
-<p><code>s[c(1:i,i:1-1)]</code> gives the numbers on each row</p>
-<p><code>rep(&quot; &quot;,abs(i-9)</code> gives the number of white space between each character</p>
-<p><a href="https://tio.run/##NcpBCsIwEEbhq4Ss5i8JmIVioz2JuIhlWgaqHTLeP40LN2/x@GprOmmxL59uy15JnHyc3eNMKY/hmhPwZrOyMlVW8s4HknjB0HsGgpI9flaC5BQTnv38YXlZV2NX875tRY0n7wG0dgA" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>68</s> 67 bytes</h1>
-<p>Port of <a href="https://codegolf.stackexchange.com/a/274318/14109">Donat’s Perl 5 solution</a>.</p>
-<pre class="lang-perl prettyprint-override"><code>say ' 'x(4-.abs)²,(1 x(9-.abs))².subst('',' 'x.abs):g:e for -8..8
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMEtRmVlheLESgV1BfUKDZX4Q5t0zbVU4rUNjTTrNAwVKjQsdVXiNTUPbdJLzs9N0svKz8zTACkFCqblFynkJhYoqCUmFevoWujpWXBRYpQG2AjNQ7v1gOZhMQkkjGwWiI_FNLAwyDwMF5lAtBzahGFCcWlScYmGuroOzAAdq3Qdq1SEMUtLS9J0LW46Y5qlQ9AsTat0q1QFNKMWQCkoDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 117 bytes</h1>
-<pre><code>d:=dearbh@mata le k idir(-8,9){n:=9-d(k)k=[]le i idir(-n+1,n)k+=[n-d(i)]scriobh(&quot; &quot;*(n*n-11*n+30)+nasc@k(&quot; &quot;*(9-n)))}
-</code></pre>
-<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDw-5GbCw" rel="nofollow noreferrer">Try it on try-setanta.ie</a></p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, <s>64</s> 57 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, <s>64</s> 57 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>say$&quot;x(4-abs)**2 .(1x(9-abs))**2=~s//$&quot;x abs/ger for-8..8
 </code></pre>
@@ -85,7 +66,26 @@
 <pre class="lang-perl prettyprint-override"><code>$n=abs,$_=(1x(9-$n))**2,s//$&quot;x$n/ge,say$&quot;x($n-4)**2 .$_ for-8..8
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/18lzzYxqVhHJd5Ww7BCw1JXJU9TU0vLSKdYX19FqUIlTz89Vac4sRLI1lDJ0zUBySnoqcQrpOUX6Vro6Vn8//8vv6AkMz@v@L@ur6megaEBAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
-<p>Based on my Perl solution for <a href="https://codegolf.stackexchange.com/a/206606/95987">Print this diamond</a>. After computing the numbers I insert the required spaces using a regex. Indentation is added in the parameter of <code>say</code>.</p>
+<p>Based on <a href="https://codegolf.stackexchange.com/a/206606/95987">my Perl solution for Print this diamond</a>. After computing the numbers I insert the required spaces using a regex. Indentation is added in the parameter of <code>say</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1>R, <del>123 Bytes</del> 113 bytes</h1>
+<pre><code>p=paste0;for(i in s&lt;-c(1:9,8:1))message(rep(&quot; &quot;,(i-6)*(i-5)),p(s[c(1:i,i:1-1)],p(rep(&quot; &quot;,abs(i-9)),collapse=&quot;&quot;)))
+</code></pre>
+<p><code>rep(&quot; &quot;,(i-6)*(i-5))</code> gives the trailing white spaces</p>
+<p><code>s[c(1:i,i:1-1)]</code> gives the numbers on each row</p>
+<p><code>rep(&quot; &quot;,abs(i-9)</code> gives the number of white space between each character</p>
+<p><a href="https://tio.run/##NcpBCsIwEEbhq4Ss5i8JmIVioz2JuIhlWgaqHTLeP40LN2/x@GprOmmxL59uy15JnHyc3eNMKY/hmhPwZrOyMlVW8s4HknjB0HsGgpI9flaC5BQTnv38YXlZV2NX875tRY0n7wG0dgA" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>68</s> 67 bytes</h1>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/274318/14109">Donat’s Perl 5 solution</a>.</p>
+<pre class="lang-perl prettyprint-override"><code>say ' 'x(4-.abs)²,(1 x(9-.abs))².subst('',' 'x.abs):g:e for -8..8
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMEtRmVlheLESgV1BfUKDZX4Q5t0zbVU4rUNjTTrNAwVKjQsdVXiNTUPbdJLzs9N0svKz8zTACkFCqblFynkJhYoqCUmFevoWujpWXBRYpQG2AjNQ7v1gOZhMQkkjGwWiI_FNLAwyDwMF5lAtBzahGFCcWlScYmGuroOzAAdq3Qdq1SEMUtLS9J0LW46Y5qlQ9AsTat0q1QFNKMWQCkoDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu3" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 117 bytes</h1>
+<pre><code>d:=dearbh@mata le k idir(-8,9){n:=9-d(k)k=[]le i idir(-n+1,n)k+=[n-d(i)]scriobh(&quot; &quot;*(n*n-11*n+30)+nasc@k(&quot; &quot;*(9-n)))}
+</code></pre>
+<p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDw-5GbCw" rel="nofollow noreferrer">Try it on try-setanta.ie</a></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, 16 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>9
