--- a/q/73091.html
+++ b/q/73091.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>075</td><td>JavaScript Node.js</td><td>240727T211830Z</td><td><a href="https://codegolf.stackexchange.com/questions/73091/implement-the-divisibility-by-7-rule/274476#274476">Andrew B</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>JavaScript Node.js</td><td>240727T211830Z</td><td><a href="https://codegolf.stackexchange.com/questions/73091/implement-the-divisibility-by-7-rule/274476#274476">Andrew B</a></td></tr>
 <tr d-ix="1"><td>027</td><td>Ruby</td><td>240727T144345Z</td><td><a href="https://codegolf.stackexchange.com/questions/73091/implement-the-divisibility-by-7-rule/274469#274469">int 21h </a></td></tr>
 <tr d-ix="2"><td>030</td><td>GCC</td><td>240427T223541Z</td><td><a href="https://codegolf.stackexchange.com/questions/73091/implement-the-divisibility-by-7-rule/272862#272862">l3akwire</a></td></tr>
 <tr d-ix="3"><td>082</td><td>Go</td><td>240422T042848Z</td><td><a href="https://codegolf.stackexchange.com/questions/73091/implement-the-divisibility-by-7-rule/272716#272716">bigyihsu</a></td></tr>
@@ -58,14 +58,14 @@
 <tr d-ix="29"><td>038</td><td>Python 2</td><td>160214T201120Z</td><td><a href="https://codegolf.stackexchange.com/questions/73091/implement-the-divisibility-by-7-rule/73093#73093">Denker</a></td></tr>
 <tr d-ix="30"><td>038</td><td>JavaScript ES6</td><td>160214T201650Z</td><td><a href="https://codegolf.stackexchange.com/questions/73091/implement-the-divisibility-by-7-rule/73094#73094">Andreas </a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (Node.js), 75 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (Node.js), 91 - 50% = 46 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>n=process.argv[2]
-f=x=&gt;(x/10|0)-2*(x%10)
-while(n&gt;70){n=f(n)}
-console.log(n)
+<pre class="lang-javascript prettyprint-override"><code>n=BigInt(process.argv[2])
+f=x=&gt;(x/10n|0n)-2n*(x%10n)
+while(n&gt;70n){n=f(n)}
+console.log(n+'')
 </code></pre>
-<p>Ran the code in VS Code with command line input, and tested all the provided test cases. Doesn't do long integers, so no bonus.</p>
+<p>Ran the code in VS Code with command line input, and tested all the provided test cases. Added support for long integers, so claiming 50% bonus.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 27 bytes</h1>
 <pre class="lang-ruby prettyprint-override"><code>f=-&gt;x{x&gt;9?f[x/10-x%10*2]:x}
