--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240728T000000Z
+"   /golfscore                                      20240728T000731Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/269725.html">How to optimize rectilinear borders             : 0269725</a>
 <a href="q/152860.html">Compare two numbers given as strings            : 0152860</a>
 <a href="q/19065.html">Display Sentence in Alphabetical Order          : 0019065</a>
 <a href="q/73091.html">Implement the divisibility-by-7 rule            : 0073091</a>
