--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240728T002201Z
+"   /golfscore                                      20240728T010022Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/256034.html">Normal Subgroups of \$S_4\$                     : 0256034</a>
 <a href="q/103377.html">Appending String Lengths                        : 0103377</a>
 <a href="q/269725.html">How to optimize rectilinear borders             : 0269725</a>
 <a href="q/152860.html">Compare two numbers given as strings            : 0152860</a>
